index css fixed so that rotation on mobile doesn't cause text size to adjust

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ html
 {
 	background-color: rgb(0, 0, 0);
 	overflow-x: hidden;	
+	-webkit-text-size-adjust: 100%;
 }
 
 html, body
